--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       <ul>
         <li>Handled data preprocessing, feature extraction, and machine learning model implementation.</li>
         <li><em>Technologies:</em> Python, Librosa, Scikit-learn, TensorFlow/Keras, Jupyter Notebook</li>
-        <li>Achieved [insert accuracy]% accuracy in classifying emotions such as happiness, sadness, anger, and neutrality.</li>
+        <li>Achieved 93% accuracy in classifying emotions such as happiness, sadness, anger, and neutrality.</li>
       </ul>
 
       <h3>Skin Cancer Detection</h3>
@@ -258,7 +258,7 @@
       <ul>
         <li>Managed dataset collection, image preprocessing, model training, and evaluation.</li>
         <li><em>Technologies:</em> Python, OpenCV, TensorFlow/Keras, CNN, Matplotlib</li>
-        <li>Achieved [insert accuracy]% accuracy in distinguishing between benign and malignant skin lesions.</li>
+        <li>Achieved 80% accuracy in distinguishing between benign and malignant skin lesions.</li>
       </ul>
     </section>
 
